orgs/blackroad-os/blackroad-salesforce-hub/force-app/main/default/objects/Mortality_Event__c/Mortality_Event__c.object-meta.xml
<CustomObject>
    <description>Death/estate processing workflow with beneficiary tracking</description>
    <label>Mortality Event</label>
    <nameField>
        <displayFormat>MORT-{0000}</displayFormat>
        <label>Event Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mortality Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>