orgs/blackroad-os/blackroad-salesforce-hub/force-app/main/default/objects/Mortality_Event__c/fields/Date_of_Death__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Death__c</fullName>
    <label>Date of Death</label>
    <type>Date</type>
</CustomField>