orgs/blackroad-os/blackroad-salesforce-hub/force-app/main/default/objects/Mortality_Event__c/fields/Death_Certificate_Received__c.field-meta.xml
<CustomField>
    <fullName>Death_Certificate_Received__c</fullName>
    <label>Death Certificate Received</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>