orgs/blackroad-os/blackroad-salesforce-hub/force-app/main/default/objects/Mortality_Event__c/fields/Deceased_Contact__c.field-meta.xml
<CustomField>
    <fullName>Deceased_Contact__c</fullName>
    <label>Deceased</label>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Mortality Events (Deceased)</relationshipLabel>
    <relationshipName>Mortality_Events_Deceased</relationshipName>
</CustomField>