orgs/blackroad-os/blackroad-salesforce-hub/force-app/main/default/objects/Mortality_Event__c/fields/Estate_Attorney__c.field-meta.xml
<CustomField>
    <fullName>Estate_Attorney__c</fullName>
    <label>Estate Attorney</label>
    <type>Text</type>
    <length>255</length>
</CustomField>