orgs/blackroad-os/blackroad-salesforce-hub/force-app/main/default/objects/Mortality_Event__c/fields/Executor_Contact__c.field-meta.xml
<CustomField>
    <fullName>Executor_Contact__c</fullName>
    <label>Executor Contact</label>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Mortality Events (Executor)</relationshipLabel>
    <relationshipName>Mortality_Events_Executor</relationshipName>
</CustomField>