orgs/blackroad-os/blackroad-salesforce-hub/force-app/main/default/objects/Mortality_Event__c/fields/Executor_Name__c.field-meta.xml
<CustomField>
    <fullName>Executor_Name__c</fullName>
    <label>Executor Name</label>
    <type>Text</type>
    <length>255</length>
</CustomField>