orgs/blackroad-os/blackroad-salesforce-hub/force-app/main/default/objects/Mortality_Event__c/fields/Probate_Required__c.field-meta.xml
<CustomField>
    <fullName>Probate_Required__c</fullName>
    <label>Probate Required</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>