orgs/blackroad-os/blackroad-salesforce-hub/force-app/main/default/objects/Mortality_Event__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Reported</fullName><default>true</default><label>Reported</label></value>
            <value><fullName>Documents Gathering</fullName><default>false</default><label>Documents Gathering</label></value>
            <value><fullName>Beneficiary Claims Filed</fullName><default>false</default><label>Beneficiary Claims Filed</label></value>
            <value><fullName>Pending Probate</fullName><default>false</default><label>Pending Probate</label></value>
            <value><fullName>Distributions Processing</fullName><default>false</default><label>Distributions Processing</label></value>
            <value><fullName>Completed</fullName><default>false</default><label>Completed</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>