orgs/blackroad-os/blackroad-salesforce-hub/force-app/main/default/objects/Mortality_Event__c/fields/Surviving_Spouse__c.field-meta.xml
<CustomField>
    <fullName>Surviving_Spouse__c</fullName>
    <label>Surviving Spouse</label>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Mortality Events (Surviving)</relationshipLabel>
    <relationshipName>Mortality_Events_Surviving</relationshipName>
</CustomField>