orgs/blackroad-os/blackroad-salesforce-hub/force-app/main/default/objects/Mortality_Event__c/fields/Total_Estate_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Estate_Value__c</fullName>
    <label>Total Estate Value</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>